--- a/PG2/Entrega_oral_1/Isa.qmd
+++ b/PG2/Entrega_oral_1/Isa.qmd
@@ -4,23 +4,140 @@ format: html
 editor: visual
 ---
 
-## Quarto
+## Item 2
 
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+Programan en c++ -\> ansiedad
 
 ```{r}
-1 + 1
+cmasmas <- sum(encuesta$`C++`[encuesta$`C++` == TRUE])  
+probabilidad <- cmasmas/nrow(encuesta)
+probabilidad
 ```
-
-You can add options to executable code like this
 
 ```{r}
-#| echo: false
-2 * 2
+ansiedad <- sum(encuesta$Ansiedad[encuesta$Ansiedad == TRUE])
+probabilidad2 <- ansiedad/nrow(encuesta)
+probabilidad2
 ```
 
-The `echo: false` option disables the printing of code (only output is displayed).
+```{r}
+pruebita <- data.frame(cmasmas = c(probabilidad, 1-probabilidad),
+                       ansiedad = c(probabilidad2, 1- probabilidad2))
+pruebita
+```
+
+```{r}
+mosaicplot(table(encuesta$JavaScript, encuesta$Ansiedad),
+           main = "Gráfico de Mosaico",
+           xlab = "Variable1",
+           ylab = "Variable2")
+```
+
+```{r}
+# Crear un dataframe de ejemplo
+dfsito <- data.frame(
+  Variable1 = c("A", "A", "B", "C", "C"),
+  Variable2 = c("X", "Y", "X", "Y", "Z")
+)
+
+# Crear el gráfico de mosaico
+mosaicplot(table(dfsito$Variable1, dfsito$Variable2), main = "Gráfico de Mosaico")
+
+```
+
+Las personas que trabajan en el lenguaje mas usado y que tenga menos salario que el promedio / tenga ansiedad
+
+```{r}
+suma_APL <- sum(encuesta$APL == TRUE)
+suma_Assembly <- sum(encuesta$Assembly == TRUE)
+suma_bash <- sum(encuesta$`Bash/Shell` == TRUE)
+sumaC <- sum(encuesta$C == TRUE)
+sumaCsharp <- sum(encuesta$`C#` == TRUE)
+sumaCmasmas <- sum(encuesta$`C++`==TRUE)
+sumaCobol <- sum(encuesta$COBOL == TRUE)
+sumaClojure <- sum(encuesta$Clojure == TRUE)
+sumaCrystal <- sum(encuesta$Crystal == TRUE)
+sumaDart <- sum(encuesta$Dart == TRUE)
+sumaDelphi <- sum(encuesta$Delphi == TRUE)
+sumaElixir <- sum(encuesta$Elixir == TRUE)
+sumaErlang <- sum(encuesta$Erlang == TRUE)
+sumaFsharp <- sum(encuesta$`F#` == TRUE)
+sumaFortran <- sum(encuesta$Fortran == TRUE)
+sumaGO <- sum(encuesta$Go == TRUE)
+sumaGroovy <- sum(encuesta$Groovy == TRUE)
+sumaHTML <- sum(encuesta$`HTML/CSS` == TRUE)
+sumaHaskell <- sum(encuesta$Haskell == TRUE)
+sumaJava <- sum(encuesta$Java == TRUE)
+sumaJavaScript <- sum(encuesta$JavaScript == TRUE)
+sumaJulia <- sum(encuesta$Julia == TRUE)
+sumaKotlin <- sum(encuesta$Kotlin == TRUE)
+sumaLISP <- sum(encuesta$LISP == TRUE)
+sumaLua <- sum(encuesta$Lua == TRUE)
+sumaMatlab <- sum(encuesta$MATLAB == TRUE)
+sumaOcaml <- sum(encuesta$OCaml == TRUE)
+sumaOC <- sum(encuesta$`Objective-C` == TRUE)
+sumaPhp <- sum(encuesta$PHP == TRUE)
+sumaPerl <- sum(encuesta$Perl == TRUE)
+sumaPowerShell <- sum(encuesta$PowerShell == TRUE)
+sumaPython <- sum(encuesta$Python == TRUE)
+sumaR <- sum(encuesta$R == TRUE)
+sumaRuby <- sum(encuesta$Ruby == TRUE)
+sumaRust <- sum(encuesta$Rust == TRUE)
+sumaSas <- sum(encuesta$SAS == TRUE)
+sumaSql <- sum(encuesta$SQL == TRUE)
+sumaScala <- sum(encuesta$Scala == TRUE)
+sumaSolidity <- sum(encuesta$Solidity == TRUE)
+sumaSwift <- sum(encuesta$Swift == TRUE)
+sumaTS <- sum(encuesta$TypeScript == TRUE)
+sumaVBA <- sum(encuesta$VBA == TRUE)
+sumas <- c(suma_APL,suma_Assembly, suma_bash, sumaC, sumaCsharp, sumaCmasmas, sumaCobol, sumaClojure, sumaCrystal, sumaDart,sumaDelphi, sumaElixir, sumaErlang,sumaFsharp, sumaFortran, sumaGO,sumaGroovy, sumaHTML,  sumaHaskell,sumaJava, sumaJavaScript, sumaJulia,sumaKotlin,sumaLISP,sumaLua,sumaMatlab,sumaOcaml,sumaOC,sumaPhp,sumaPerl,sumaPowerShell, sumaPython,sumaR ,sumaRuby,sumaRust,sumaSas,sumaSql,sumaScala,sumaSolidity,sumaSwift,sumaTS,sumaVBA )
+
+nombres <- c('suma_APL','suma_Assembly', 'suma_bash', 'sumaC', 'sumaCsharp', 'sumaCmasmas', 'sumaCobol', 'sumaClojure', 'sumaCrystal', 'sumaDart','sumaDelphi', 'sumaElixir', 'sumaErlang','sumaFsharp', 'sumaFortran', 'sumaGO','sumaGroovy', 'sumaHTML',  'sumaHaskell','sumaJava', 'JavaScript', 'sumaJulia','sumaKotlin','sumaLISP','sumaLua','sumaMatlab','sumaOcaml','sumaOC','sumaPhp','sumaPerl','sumaPowerShell', 'sumaPython','sumaR' ,'sumaRuby','sumaRust','sumaSas','sumaSql','sumaScala','sumaSolidity','sumaSwift','sumaTS','sumaVBA' )
+
+indice_max <- which.max(sumas)
+variable_max <- nombres[indice_max]
+cat("El lenguaje de programacion mas usado es:", variable_max)
+```
+
+Las personas que trabajan en JavaScript y que tenga menos salario que el promedio / tenga ansiedad
+
+```{r}
+promedio <- mean(datos2$Salary)
+cat("El promedio del salario de los programadores es de:", promedio)
+```
+
+Las personas que trabajan en JavaScript con salario \< 76153.59 / tenga ansiedad
+
+```{r}
+cantidad <- sum(encuesta$JavaScript == TRUE & datos2$Salary < 76153.59, na.rm = TRUE)
+cat("La cantidad de personas que trabajan en JavaScript con salario < 76153.59:", cantidad)
+```
+
+Probabilidad (Las personas que trabajan en JavaScript con salario \< 76153.59)
+
+```{r}
+probabilidadJS <- cantidad/nrow(encuesta)
+probabilidadJS
+```
+
+```{r}
+cantAnsiedad <- sum(encuesta$Ansiedad[encuesta$Ansiedad == TRUE])
+probabilidadAnsiedad <- ansiedad/nrow(encuesta)
+probabilidadAnsiedad
+```
+
+```{r}
+pruebita2 <- data.frame(probabilidadJavaScript = c(probabilidadJS, 1-probabilidadJS),
+                       probabilidad_ansiedad = c(probabilidadAnsiedad, 1- probabilidadAnsiedad),
+                       row.names = c("JavaScript", "No JavaScript"))
+pruebita2
+```
+
+```{r}
+# Crear la tabla de contingencia
+tabla <- table(pruebita2$probabilidadJavaScript, pruebita2$probabilidad_ansiedad)
+
+# Generar el mosaico plot
+mosaicplot(tabla, main = "Gráfico de Mosaico", xlab = "JavaScript", ylab = "Ansiedad")
+
+```
